Added sebastian/git to the composer requirements

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "arekvanschaijk/bitbucket-server-client",
   "description": "Bitbucket Server Client for PHP",
   "require" : {
-    "guzzlehttp/guzzle" : "^6"
+    "guzzlehttp/guzzle" : "^6",
+    "sebastian/git": "^2"
   },
   "autoload" : {
     "psr-4": {
